create home model

--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,8 @@ default: &default
 development:
   <<: *default
   database: impuls2_development
-
+  username: deploy
+  password: 78803054
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -32,7 +33,7 @@ development:
   #username: impuls2
 
   # The password associated with the postgres role (username).
-  #password:
+ # password:  
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
